<?xml version="1.0"?>
<package>
  <name>jetsoncar_teleop</name>
  <version>0.5.0</version>
  <description>The jetsoncar_teleop package</description>
  <maintainer email="jim@jetsonhacks.com">JetsonHacks</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
